hphp/hack/test/typecheck/xhp_attr_11.php.exp
File "xhp_attr_11.php", line 4, characters 14-14:
A name is expected here. (Parsing[1002])
