hphp/hack/test/typecheck/xhp_attr_11.php
<?hh
class :foo {
  // XHP attributes cannot be declared without a type
  attribute x;
}
